@@ -7,7 +7,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Controlleur de tous les endpoints permettant de gérer la nourriture
@@ -34,7 +33,7 @@ public class FoodProductController {
     public List<FoodProductResponseDto> getAllFoods() {
         return foodService.getAllFoods().stream()
                 .map(FoodProductResponseDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
