@@ -13,9 +13,6 @@ import java.util.*;
  */
 @Service
 public class OptimizerService {
-
-    public OptimizerService() {}
-
     /**
      * Algorithme d'optimisation pour l'équipement.
      * Parcourt chaque catégorie d'équipement requise et sélectionne la combinaison
@@ -91,7 +88,7 @@ public class OptimizerService {
         List<EquipmentItem> solutionTake = sortBestEquipmentV2(candidats, currentSelection, nbParticipant, index + 1);
 
         // Backtrack : Retrait de l'item pour explorer l'autre branche
-        currentSelection.remove(currentSelection.size() - 1);
+        currentSelection.removeLast();
 
         // Exploration de la branche : Exclusion de l'item
         List<EquipmentItem> solutionSkip = sortBestEquipmentV2(candidats, currentSelection, nbParticipant, index + 1);
@@ -100,11 +97,11 @@ public class OptimizerService {
         if (solutionTake == null) return solutionSkip;
         if (solutionSkip == null) return solutionTake;
 
-        // Priorité à la solution comportant le moins d'items distincts
+        // Priorité à la solution comportant le plus d'items distincts
         if (solutionTake.size() < solutionSkip.size()) {
-            return solutionTake;
-        } else if (solutionSkip.size() < solutionTake.size()) {
             return solutionSkip;
+        } else if (solutionSkip.size() < solutionTake.size()) {
+            return solutionTake;
         }
 
         return solutionTake;
@@ -169,7 +166,7 @@ public class OptimizerService {
         // Branche inclusion
         currentSelection.add(item);
         List<FoodProduct> solutionTake = sortBestFoodRecursive(candidats, currentSelection, targetKcal, index + 1);
-        currentSelection.remove(currentSelection.size() - 1);
+        currentSelection.removeLast();
 
         // Branche exclusion
         List<FoodProduct> solutionSkip = sortBestFoodRecursive(candidats, currentSelection, targetKcal, index + 1);
